# LearnCMake

./: LICENSE  README.md
属性/全局属性/: CMakeLists.txt
属性/目录属性/: CMakeLists.txt
属性/目标属性/: CMakeLists.txt
生成器表达式/条件表达式和逻辑运算符/: CMakeLists.txt
